// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components LoginForm renders correctly 1`] = `
<main
  className="LoginForm-layout-1"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root-3 MuiFormControl-marginNormal-4 MuiFormControl-fullWidth-6"
    >
      <label
        className="MuiFormLabel-root-14 MuiFormLabel-filled-18 MuiFormLabel-required-19 MuiInputLabel-root-7 MuiInputLabel-formControl-8 MuiInputLabel-animated-11 MuiInputLabel-shrink-10"
        data-shrink={true}
        htmlFor="email"
      >
        E-Mail
        <span
          className="MuiFormLabel-asterisk-20"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-34 MuiInput-root-21 MuiInput-underline-25 MuiInputBase-formControl-35 MuiInput-formControl-22"
        data-cy="email"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="email"
          autoFocus={true}
          className="MuiInputBase-input-44 MuiInput-input-29"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value="test@example.com"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-3 MuiFormControl-marginNormal-4 MuiFormControl-fullWidth-6"
    >
      <label
        className="MuiFormLabel-root-14 MuiFormLabel-filled-18 MuiFormLabel-required-19 MuiInputLabel-root-7 MuiInputLabel-formControl-8 MuiInputLabel-animated-11 MuiInputLabel-shrink-10"
        data-shrink={true}
        htmlFor="password"
      >
        Passwort
        <span
          className="MuiFormLabel-asterisk-20"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-34 MuiInput-root-21 MuiInput-underline-25 MuiInputBase-formControl-35 MuiInput-formControl-22"
        data-cy="password"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="current-password"
          className="MuiInputBase-input-44 MuiInput-input-29 MuiInputBase-inputType-47 MuiInput-inputType-32"
          disabled={false}
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="password"
          value="mypassword"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-contained-62 MuiButton-containedPrimary-63 MuiButton-raised-65 MuiButton-raisedPrimary-66 MuiButton-fullWidth-76"
      data-cy="submit"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-52"
      >
        Anmelden
      </span>
      <span
        className="MuiTouchRipple-root-80"
      />
    </button>
  </form>
</main>
`;

exports[`components LoginForm renders error message if login failed 1`] = `
<main
  className="LoginForm-layout-1"
>
  <p
    className="MuiTypography-root-87 MuiTypography-body1-96 LoginForm-failureMessage-2"
  >
    Falsche Login-Daten
  </p>
  <form
    onSubmit={[Function]}
  >
    <div
      className="MuiFormControl-root-3 MuiFormControl-marginNormal-4 MuiFormControl-fullWidth-6"
    >
      <label
        className="MuiFormLabel-root-14 MuiFormLabel-filled-18 MuiFormLabel-required-19 MuiInputLabel-root-7 MuiInputLabel-formControl-8 MuiInputLabel-animated-11 MuiInputLabel-shrink-10"
        data-shrink={true}
        htmlFor="email"
      >
        E-Mail
        <span
          className="MuiFormLabel-asterisk-20"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-34 MuiInput-root-21 MuiInput-underline-25 MuiInputBase-formControl-35 MuiInput-formControl-22"
        data-cy="email"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="email"
          autoFocus={true}
          className="MuiInputBase-input-44 MuiInput-input-29"
          disabled={false}
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value="test@example.com"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-3 MuiFormControl-marginNormal-4 MuiFormControl-fullWidth-6"
    >
      <label
        className="MuiFormLabel-root-14 MuiFormLabel-required-19 MuiInputLabel-root-7 MuiInputLabel-formControl-8 MuiInputLabel-animated-11"
        data-shrink={false}
        htmlFor="password"
      >
        Passwort
        <span
          className="MuiFormLabel-asterisk-20"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root-34 MuiInput-root-21 MuiInput-underline-25 MuiInputBase-formControl-35 MuiInput-formControl-22"
        data-cy="password"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoComplete="current-password"
          className="MuiInputBase-input-44 MuiInput-input-29 MuiInputBase-inputType-47 MuiInput-inputType-32"
          disabled={false}
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root-77 MuiButton-root-51 MuiButton-contained-62 MuiButton-containedPrimary-63 MuiButton-raised-65 MuiButton-raisedPrimary-66 MuiButton-fullWidth-76"
      data-cy="submit"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-52"
      >
        Anmelden
      </span>
      <span
        className="MuiTouchRipple-root-80"
      />
    </button>
  </form>
</main>
`;
